Fixed mobile toast overflow; added help button and popover.

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@ body,
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
+  overflow: hidden;
 }
 
 .NWRowOfCols {
