--- a/src/modules/NWHeader.css
+++ b/src/modules/NWHeader.css
@@ -15,8 +15,38 @@
   margin-left: var(--component-margin);
 }
 
-.SwitchModeButton {
-  font-size: inherit;
-  font-family: inherit;
+.NWHeaderButtonRow {
+  display: flex;
+  flex-direction: row;
+}
+
+.NWHeaderButton {
   margin-right: var(--component-margin);
+}
+
+.HelpPopover {
+  position: absolute;
+  top: calc(var(--tile-diam) - var(--component-margin));
+  right: calc(50% - var(--wg-draw-width) / 2);
+  left: calc(50% - var(--wg-draw-width) / 2);
+
+  z-index: 100;
+
+  background-color: white;
+  color: black;
+
+  box-shadow: var(--material-shadow);
+  padding-left: var(--component-margin);
+  padding-right: var(--component-margin);
+  border-radius: 4px;
+}
+
+.HelpPopover > p {
+  font-size: calc(var(--tile-font-size) / 2);
+}
+
+.HelpPopoverX {
+  position: absolute;
+  top: var(--component-margin);
+  right: var(--component-margin);
 }
